deployments/apps/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-api-service
spec:
  selector: 
    app: go-api
  type: ClusterIP
  ports:
    - port: 8081
      targetPort: 8081
      protocol: TCP
